--- a/src/main/resources/com/pasegados/labo/calibraciones/EditorCalibracion.fxml
+++ b/src/main/resources/com/pasegados/labo/calibraciones/EditorCalibracion.fxml
@@ -141,9 +141,9 @@
                         <Insets left="30.0" top="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <Button fx:id="btAnalizarPatron" alignment="CENTER" minHeight="70.0" minWidth="190.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#analizarPatron" prefHeight="70.0" prefWidth="190.0" style="-fx-content-display: LEFT;" styleClass="btnAnalizarPat" text="ANALIZAR" textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.rowSpan="2" GridPane.valignment="BOTTOM">
+                  <Button fx:id="btAnalizarPatron" alignment="CENTER" contentDisplay="CENTER" minHeight="70.0" minWidth="190.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#analizarPatron" prefHeight="70.0" prefWidth="190.0" style="-fx-content-display: LEFT;" styleClass="btnAnalizarPat" text="ANALIZAR" textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.rowSpan="2" GridPane.valignment="BOTTOM">
                      <graphic>
-                        <ImageView fitHeight="50.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" translateX="-25.0">
+                        <ImageView fitHeight="50.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" translateX="-20.0">
                            <image>
                               <Image url="@cap.png" />
                            </image>
@@ -153,7 +153,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                      <font>
-                        <Font name="System Bold" size="11.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font>
                      <padding>
                         <Insets left="10.0" />
@@ -266,10 +266,7 @@
                         <Insets left="30.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label fx:id="lbCoefCuad" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label fx:id="lbCoefLin" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label fx:id="lbTermiInd" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label text="R2:" GridPane.rowIndex="4">
+                  <Label fx:id="lbCoefR2" text="Coef. R2:" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -277,6 +274,9 @@
                         <Insets left="30.0" />
                      </GridPane.margin>
                   </Label>
+                  <Label fx:id="lbCoefCuad" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="lbCoefLin" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="lbTermiInd" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <Label fx:id="lbR2" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Button fx:id="btGrafica" alignment="CENTER" contentDisplay="CENTER" maxHeight="115.0" maxWidth="195.0" minHeight="115.0" minWidth="195.0" mnemonicParsing="false" onAction="#muestraGrafica" prefHeight="115.0" prefWidth="195.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                      <graphic>
