--- a/src/main/resources/com/pasegados/labo/configuracion/EditorAjuste_1.fxml
+++ b/src/main/resources/com/pasegados/labo/configuracion/EditorAjuste_1.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="450.0" maxWidth="500.0" minHeight="350.0" minWidth="359.0" prefHeight="448.0" prefWidth="359.0" style="-fx-border-color: white;" stylesheets="@../aspecto.css" xmlns="http://javafx.com/javafx/17.0.8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pasegados.labo.configuracion.EditorAjusteControlador">
+<AnchorPane id="AnchorPane" maxHeight="450.0" maxWidth="500.0" minHeight="350.0" minWidth="359.0" prefHeight="448.0" prefWidth="359.0" style="-fx-border-color: white;" stylesheets="@../aspecto.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pasegados.labo.configuracion.EditorAjusteControlador_1">
    <children>
       <GridPane layoutX="37.0" layoutY="31.0" minHeight="300.0" minWidth="540.0" prefHeight="300.0" prefWidth="540.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
@@ -81,22 +81,22 @@
                   <Insets right="-20.0" />
                </GridPane.margin>
             </Label>
-            <Spinner prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Spinner fx:id="spAnalisisPagina" prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Spinner>
-            <Spinner prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+            <Spinner fx:id="spAnalisisMenu" prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Spinner>
-            <Spinner prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Spinner fx:id="spCalibracionPagina" prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Spinner>
-            <Spinner prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+            <Spinner fx:id="spCalibracionMenu" prefHeight="26.0" prefWidth="55.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
