--- a/src/main/resources/com/pasegados/labo/calibraciones/TabCalibraciones.fxml
+++ b/src/main/resources/com/pasegados/labo/calibraciones/TabCalibraciones.fxml
@@ -323,6 +323,24 @@
                               <Insets left="-15.0" />
                            </GridPane.margin>
                         </Label>
+                        <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#sincronizarCoeficientes" prefHeight="32.0" prefWidth="32.0" styleClass="btImagenContraste" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                           <graphic>
+                              <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@synchro.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <tooltip>
+                              <Tooltip text="Sincronizar coeficientes PC-LabX" />
+                           </tooltip>
+                           <GridPane.margin>
+                              <Insets top="10.0" />
+                           </GridPane.margin>
+                        </Button>
                      </children>
                   </GridPane>
                </children>
